force-app/main/default/objects/SharePointError__c/SharePointError__c.object-meta.xml
<CustomObject>
    <label>SharePoint Error</label>
    <nameField>
        <displayFormat>Error-{0000}</displayFormat>
        <label>SharePoint Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SharePoint Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>