force-app/main/default/objects/SharePointError__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SharePoint Errors</relationshipLabel>
    <relationshipName>SharePoint_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>