force-app/main/default/objects/SharePointError__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Folder</fullName>
            </value>
            <value>
                <fullName>Quote File</fullName>
            </value>
            <value>
                <fullName>Scope File</fullName>
            </value>
            <value>
                <fullName>Submittal File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>